--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,108 @@
 /**  
  ** Partners Section
 **/
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
 .partners-item {
   -ms-flex: 1; /* IE 10 */
   flex: 1;
   flex: 50%;
+}
+
+.container-coupons {
+  max-width: 90%;
+}
+
+.coupon-box {
+  border: 1px solid #ececec;
+  transition: all 0.25s linear;
+  margin-bottom: 30px;
+}
+
+.coupon-box:hover {
+  border: transparent;
+  box-shadow: 0px 0px 4px;
+}
+
+.coupon-box .image-holder {
+  width: 100%;
+  overflow: hidden;
+}
+
+.coupon-box .image-holder img {
+  width: 100%;
+  transition: all 0.25s linear;
+}
+
+.coupon-box .image-holder img:hover {
+  transform: scale(1.1);
+}
+
+.text-holder {
+  padding: 2rem 1rem;
+}
+
+.coupon-box .text-holder h3 {
+  font-size: 16px;
+}
+
+.coupon-box .text-holder h3 a {
+  color: #101010;
+  display: block;
+  transition: all 0.25s linear;
+  margin-bottom: 2rem;
+}
+
+.coupon-box .text-holder h3 a:hover {
+  color: #ffb300;
+}
+
+.coupon-box .text-holder p {
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
+}
+
+.coupon-box .text-holder p .promo {
+  padding: 4px;
+  margin: 0 4px;
+  border: 2px solid #ff3300;
+  border-radius: 10px;
+  font-size: 1.3rem;
+  background-color: #dcdcdc;
+  box-shadow: 4px 4px #dcdcdc;
+}
+
+.coupon-box .text-holder .btn-primary {
+  color: #ffffff;
+  background: #ffb300;
+  font-size: 1.2rem;
+  letter-spacing: 0.05rem;
+  padding: 13px 10px;
+  width: 100%;
+  display: block;
+  margin: 2rem 0;
+  border: none;
+}
+
+.coupon-box .text-holder .btn-primary:hover {
+  background: #2e6da4;
+}
+
+.coupon-box .text-holder .time {
+  font-size: 13px;
+  display: block;
+  color: #ff3300;
+  font-size: 1rem;
 }
 
 /**  
