--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,17 @@
-/**  
- ** Partners Section
-**/
 * {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  padding: 4rem 0;
+}
+
+h2 {
+  padding: 4rem 0;
 }
 
 a {
@@ -29,6 +38,83 @@ a:hover {
 
 .navbar-light .navbar-nav .nav-link:hover {
   color: #ffb300;
+}
+
+.container-aboutUs {
+  max-width: 70%;
+  padding-top: 6rem;
+}
+
+.spacing {
+  padding-left: 100px;
+  padding-right: 120px;
+}
+
+.aboutTabs {
+  flex-direction: column;
+  align-items: flex-end;
+  height: auto;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.tab-single {
+  width: 100%;
+  text-transform: uppercase;
+  border: 1px solid #e0e0e0;
+  font-family: 'Khand', sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #1c2025;
+  margin-bottom: 8px;
+  height: auto;
+  background: #ffc300;
+  text-align: right;
+  padding: 2px 24px;
+  line-height: 48px;
+}
+
+.tab-single:hover {
+  color: #f8f9fa;
+  background-color: #2e6da4;
+  transition: ease 0.5s;
+}
+
+.panel-single {
+  display: none;
+  border-bottom: none;
+  padding: 70px 0 40px;
+  margin-bottom: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+}
+
+.is-active {
+  display: block;
+}
+
+.section-title {
+  color: #1c2025;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 0.9;
+  text-transform: uppercase;
+  margin: 0 0 15px -4px;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+hr {
+  border-top: 2px solid #ffc300;
+  width: 40px;
+  height: 1px;
+}
+
+hr.left {
+  margin: 1.3em 0 1.4em 0;
 }
 
 .partners-item {
@@ -112,11 +198,6 @@ a:hover {
   display: block;
   color: #ff3300;
   font-size: 1rem;
-}
-
-.blog-section {
-  padding: 2rem 0;
-  position: relative;
 }
 
 .blog-heading {
