--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,11 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #888;
+}
+
 section {
   padding: 4rem 0;
 }
@@ -328,6 +333,26 @@ hr.left {
 .btn-primary {
   background-color: #ffb300;
   border-color: #ffb300;
+}
+
+.footer-top {
+  padding: 60px 0 40px 0;
+  text-align: center;
+}
+
+.footer-top h3 {
+  margin-bottom: 2rem;
+}
+
+.footer-bottom {
+  padding: 2rem 0;
+}
+
+.footer-social a {
+  font-size: 32px;
+  margin: 0 0.6rem;
+  color: #bbb;
+  border: 0;
 }
 
 /**  
